--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "frontend-javascript-country-information-world-regions",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Inleiding",
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
   },
-  "author": "",
+  "author": "TTV",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
+    "buffer": "^5.7.1",
     "parcel": "^2.0.0",
     "parcel-plugin-nuke-dist": "^1.0.1"
+  },
+  "dependencies": {
+    "axios": "^1.3.5"
   }
 }
